force-app/main/default/objects/PDRI__Managed_Relationship__c/PDRI__Managed_Relationship__c.object-meta.xml
<CustomObject>
    <label>Managed Relationship</label>
    <nameField>
        <displayFormat>MR-{0000000}</displayFormat>
        <label>Managed Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Managed Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>