force-app/main/default/objects/PDRI__Managed_Relationship__c/fields/PDRI__Child_Managed_Object__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Child_Managed_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Managed Object</label>
    <referenceTo>PDRI__Managed_Object__c</referenceTo>
    <relationshipLabel>Child Managed Relationships</relationshipLabel>
    <relationshipName>Child_Managed_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>