force-app/main/default/objects/PDRI__Managed_Relationship__c/fields/PDRI__Child_Managed_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Child_Managed_Object_Name__c</fullName>
    <formula>PDRI__Child_Managed_Object__r.PDRI__Object_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child Managed Object Name</label>
    <type>Text</type>
</CustomField>