force-app/main/default/objects/PDRI__Managed_Relationship__c/fields/PDRI__Managed_Object__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Managed_Object__c</fullName>
    <label>Parent Managed Object</label>
    <referenceTo>PDRI__Managed_Object__c</referenceTo>
    <relationshipLabel>Managed Relationships</relationshipLabel>
    <relationshipName>Managed_Relationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>