force-app/main/default/objects/PDRI__Managed_Relationship__c/fields/PDRI__Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Relationship_Name__c</fullName>
    <label>Relationship Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>